Fixed text align in section lists

--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,7 @@ h1 {
   }
 
   .list-text {
-    width: 80%;
+    text-align: center;
   }
 }
 
